Prevent the cluster name in the task churn component from wrapping, I've added an ellipsis rule instead

--- a/src/components/services/taskChurnComponent/taskChurnComponent.css
+++ b/src/components/services/taskChurnComponent/taskChurnComponent.css
@@ -15,6 +15,13 @@
     margin-left:1em;
 }
 
+.churn-entry dt {
+    width:100%;
+    overflow:hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 .tooltipped {
     cursor:pointer;
 }
